--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
+    "lucide-react": "^0.246.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
     "vanta": "^0.5.24"
   }
