--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.3",
-    "vanta": "^0.5.24"
+    "typescript": "5.1.3"
   }
 }
