--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
     "sharp": "^0.32.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
